tests/error/linear_errors/duplicate_subscript_owned.err
Error: Copy violation (at $FILE:18:40)
   | 
16 |     # Compile time error: The same qubit cannot be used with different
17 |     # ownership modes simultaneously due to required linearity.
18 |     q1, q2 = mixed_ownership(qubits[0], qubits[0])
   |                                         ^^^^^^^^^ Subscript `qubits[...]` with non-copyable type `qubit`
   |                                                   cannot be consumed ...

Note:
   | 
17 |     # ownership modes simultaneously due to required linearity.
18 |     q1, q2 = mixed_ownership(qubits[0], qubits[0])
   |                              --------- Subscript `qubits[...]` already borrowed here

Guppy compilation failed due to 1 previous error
